# Argus-esp

./: .gitignore  CLAUDE.md  CMakeLists.txt  sdkconfig
components/core/: CMakeLists.txt  state_machine.cpp
components/core/include/: pin_config.h  state_machine.h  system_events.h  system_flags.h
components/drivers/: ActuatorManager.cpp  CMakeLists.txt  LedManager.cpp  a7670_driver.cpp  mosfet_control.cpp  mpu6050_driver.cpp
components/drivers/include/: ActuatorManager.h  LedManager.h  a7670_driver.h  mosfet_control.h  mpu6050_driver.h
components/services/: CMakeLists.txt  ble_task.cpp  comm_task.cpp  control_task.cpp  event_queue.cpp  sensor_task.cpp  sync_manager.cpp
components/services/include/: ble_task.h  comm_task.h  control_task.h  event_queue.h  sensor_task.h  sync_manager.h
components/utils/: CMakeLists.txt
components/utils/include/: logger.h
main/: CMakeLists.txt  main.cpp
